--- a/public/scss/blocks/_search-overlay.scss
+++ b/public/scss/blocks/_search-overlay.scss
@@ -68,6 +68,7 @@
     color: $color-blue-light;
     text-decoration: none;
     display: inline-block;
+    min-width: 50%;
     padding-top: 15px;
     padding-bottom: 15px;
     h3, p {
